[package]
name = "chpawn-frozen-king"
version = "1.0.0"
edition = "2021"

[lib]
name = "chpawn_frozen_king"
path = "src/lib.rs"

[[bin]]
name = "chpawn-frozen-king"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "selfplay"
path = "src/bin/selfplay.rs"

[dependencies]
shakmaty = { version = "0.26", features = ["variant"] }
shakmaty-syzygy = "0.24"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
